--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,74 @@
+@font-face {
+  font-family: "League Spartan";
+  src: url(de124ab4fe636436b7f9d3b1f5ac3eed.woff); }
+
 html, body, #graph {
   margin: 0;
   padding: 0;
   max-width: 100%;
   max-height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  font-family: "League Spartan", Monospace;
+  font-size: 0.9em; }
+
+#filterContainer {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 3%;
+  width: 20%;
+  height: 80vh;
+  border-radius: 0;
+  background: rgba(16, 16, 32, 0.8);
+  border: 1px solid rgba(128, 128, 255, 0.6);
+  color: rgba(128, 128, 255, 0.6);
+  padding: 2em;
+  white-space: nowrap; }
+  #filterContainer ul#filterCheckList {
+    list-style: none;
+    padding: 0; }
+    #filterContainer ul#filterCheckList li {
+      padding: 0;
+      margin: 0 0 0 0.3em; }
+  #filterContainer input {
+    display: block;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    color: rgba(128, 128, 255, 0.6); }
+  #filterContainer input[type="search"] {
+    background-color: transparent;
+    border-radius: 0;
+    border: 1px solid rgba(128, 128, 255, 0.6);
+    font-family: inherit;
+    font-size: 1em;
+    width: 100%;
+    padding: 0.3em; }
+  #filterContainer input[type="search"]::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgba(128, 128, 255, 0.6);
+    margin-left: 0.5em;
+    opacity: 1;
+    /* Firefox */ }
+  #filterContainer input[type="search"]:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: rgba(128, 128, 255, 0.6);
+    margin-left: 0.5em; }
+  #filterContainer input[type="search"]::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: rgba(128, 128, 255, 0.6);
+    margin-left: 0.5em; }
+  #filterContainer input[type="checkbox"] {
+    display: inline-block;
+    margin: 0em 0.5em 0 0;
+    transform: translateY(0.15em);
+    background-color: transparent;
+    border-radius: 0;
+    border: 1px solid rgba(128, 128, 255, 0.6);
+    width: 1em;
+    height: 1em; }
+  #filterContainer input[type="checkbox"]:checked {
+    background-color: rgba(128, 128, 255, 0.6); }
+  #filterContainer input[type="checkbox"]:focus {
+    outline: 1px solid rgba(128, 128, 255, 0.6); }
 
