--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,11 +8,11 @@ html
     #graph
      | this is the graph container
     #filterContainer
-     input(type="search", id="searchInput", placeholder="Search filters")
+     input(type="search", id="filterSearchInput", placeholder="Search filters")
      #labelFilters
       h3 Labels
       ul(id="filterCheckList")
-       // li
-       //   input(type="checkbox", class="filterCheckbox")
-       //   | check
+       li
+         input(type="checkbox", class="labelFilter", id="allLabels", checked)
+         | Alle
   script(type='text/javascript', src='/js/main.js')
