--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 $indigo: rgba(16,16,32,0.8);
+$indigoMD: rgba(64,64,128,0.8);
 $indigoLT: rgba(128,128,255,0.6);
 
 @font-face{
@@ -16,10 +17,10 @@ html, body, #graph{
 #filterContainer{
     position: fixed;
     top: 50%;
-    transform: translateY(-50%);
-    left: 3%;
-    width: 20%;
-    height: 80vh;
+    // transform: translateY(-50%);
+    left: 5%;
+    width: 17%;
+    height: 70vh;
     border-radius: 0;
     background: $indigo;
     border:1px solid $indigoLT;
@@ -28,6 +29,7 @@ html, body, #graph{
     // overflow-y: scroll;
     // overflow-x: hidden;
     white-space: nowrap;
+    transform: translateY(-50%) perspective(900px) rotateY(15deg);
 
     #labelFilters{
 
@@ -84,5 +86,8 @@ html, body, #graph{
     }
     input[type="checkbox"]:focus{
         outline: 1px solid $indigoLT;
+    }
+    input[type="checkbox"].varies{
+        background-color: $indigoMD;
     }
 }
