--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,75 +2,349 @@
   font-family: "League Spartan";
   src: url(de124ab4fe636436b7f9d3b1f5ac3eed.woff); }
 
+@font-face {
+  font-family: "League Mono";
+  src: url(928d337576fa0d85ae1f100f78c7a5f1.otf);
+  font-weight: 300; }
+
+@font-face {
+  font-family: "League Mono";
+  src: url(fb4358b67424fb5523d79f45984269c7.otf);
+  font-weight: 200; }
+
+@font-face {
+  font-family: "League Mono";
+  src: url(39446831005da8e2d39091c6a603a0c6.otf);
+  font-weight: 100; }
+
 html, body, #graph {
   margin: 0;
   padding: 0;
   max-width: 100%;
   max-height: 100%;
   overflow: hidden;
-  font-family: "League Spartan", Monospace;
-  font-size: 0.9em; }
+  font-family: Monospace, "League Spartan", Monospace;
+  font-size: 0.85em;
+  font-weight: 200;
+  background-color: white;
+  line-height: 1.5em; }
 
-#filterContainer {
-  position: fixed;
+a.cleanLink, a.cleanLink:hover, a.cleanLink:active, a.cleanLink:visited {
+  color: black;
+  text-decoration: none; }
+
+ul {
+  list-style: none;
+  padding: 0; }
+  ul li {
+    padding: 0;
+    margin: 0 0 0 0.3em; }
+
+#taskbar {
+  border-bottom: 1px solid black; }
+  #taskbar ul {
+    margin: 0.1em; }
+  #taskbar li {
+    display: inline-block;
+    vertical-align: middle; }
+  #taskbar #start {
+    background-image: url(../img/logo.svg);
+    min-width: 2em;
+    min-height: 2em;
+    background-repeat: no-repeat;
+    background-size: contain; }
+  #taskbar #startMenu {
+    position: fixed;
+    top: 2.2em;
+    background: white;
+    border: 1px solid black;
+    border-left: none;
+    min-width: 300px;
+    display: none;
+    z-index: 9999; }
+    #taskbar #startMenu li {
+      display: list-item;
+      padding: 1em; }
+
+.window {
+  position: absolute;
   top: 50%;
+  border-radius: 0;
+  background: white;
+  border: 1px solid black;
+  color: black;
+  transform: translateY(-50%);
+  overflow: hidden;
+  display: block; }
+  .window .titleBar {
+    /*display: table-row;*/
+    border-bottom: 1px solid black;
+    padding: 0em 0em;
+    text-align: center;
+    cursor: move; }
+    .window .titleBar .leftCol, .window .titleBar .middleCol, .window .titleBar .rightCol {
+      display: inline-block;
+      text-align: center;
+      vertical-align: middle; }
+    .window .titleBar .leftCol {
+      width: 10%; }
+    .window .titleBar .middleCol {
+      width: 80%;
+      white-space: nowrap;
+      overflow: hidden; }
+    .window .titleBar .rightCol {
+      width: 10%; }
+  .window .scrollWrapper {
+    max-height: 70vh; }
+  .window .windowContent {
+    padding: 2em; }
+    .window .windowContent hr {
+      color: black;
+      border: none;
+      border-bottom: 1px solid black; }
+
+#filterWindow {
   left: 5%;
   width: 17%;
-  height: 70vh;
-  border-radius: 0;
-  background: rgba(16, 16, 32, 0.8);
-  border: 1px solid rgba(128, 128, 255, 0.6);
-  color: rgba(128, 128, 255, 0.6);
-  padding: 2em;
-  white-space: nowrap;
-  transform: translateY(-50%) perspective(900px) rotateY(15deg); }
-  #filterContainer ul#filterCheckList {
-    list-style: none;
-    padding: 0; }
-    #filterContainer ul#filterCheckList li {
-      padding: 0;
-      margin: 0 0 0 0.3em; }
-  #filterContainer input {
+  white-space: nowrap; }
+  #filterWindow input {
     display: block;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    color: rgba(128, 128, 255, 0.6); }
-  #filterContainer input[type="search"] {
+    color: black; }
+  #filterWindow input[type="search"] {
     background-color: transparent;
     border-radius: 0;
-    border: 1px solid rgba(128, 128, 255, 0.6);
+    border: 1px solid black;
     font-family: inherit;
     font-size: 1em;
     width: 100%;
     padding: 0.3em; }
-  #filterContainer input[type="search"]::placeholder {
+  #filterWindow input[type="search"]::placeholder {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: rgba(128, 128, 255, 0.6);
+    color: black;
     margin-left: 0.5em;
     opacity: 1;
     /* Firefox */ }
-  #filterContainer input[type="search"]:-ms-input-placeholder {
+  #filterWindow input[type="search"]:-ms-input-placeholder {
     /* Internet Explorer 10-11 */
-    color: rgba(128, 128, 255, 0.6);
+    color: black;
     margin-left: 0.5em; }
-  #filterContainer input[type="search"]::-ms-input-placeholder {
+  #filterWindow input[type="search"]::-ms-input-placeholder {
     /* Microsoft Edge */
-    color: rgba(128, 128, 255, 0.6);
+    color: black;
     margin-left: 0.5em; }
-  #filterContainer input[type="checkbox"] {
+  #filterWindow input[type="checkbox"] {
     display: inline-block;
     margin: 0em 0.5em 0 0;
     transform: translateY(0.15em);
     background-color: transparent;
     border-radius: 0;
-    border: 1px solid rgba(128, 128, 255, 0.6);
+    border: 1px solid black;
     width: 1em;
     height: 1em; }
-  #filterContainer input[type="checkbox"]:checked {
-    background-color: rgba(128, 128, 255, 0.6); }
-  #filterContainer input[type="checkbox"]:focus {
-    outline: 1px solid rgba(128, 128, 255, 0.6); }
-  #filterContainer input[type="checkbox"].varies {
-    background-color: rgba(64, 64, 128, 0.8); }
+  #filterWindow input[type="checkbox"]:checked {
+    background-color: black; }
+  #filterWindow input[type="checkbox"]:focus {
+    outline: 1px solid black; }
+  #filterWindow input[type="checkbox"].varies {
+    background-color: rgba(255, 255, 255, 0.8); }
+
+#infoWindow {
+  right: 5%;
+  width: 17%; }
+  #infoWindow h3 {
+    color: black; }
+  #infoWindow #nodePropList {
+    margin-top: 0; }
+    #infoWindow #nodePropList li {
+      display: inline-block; }
+  #infoWindow ul {
+    list-style: none;
+    padding: 0; }
+    #infoWindow ul li {
+      padding: 0.3em;
+      margin: 0 0 0 0; }
+    #infoWindow ul li:hover {
+      color: white;
+      background-color: black; }
+    #infoWindow ul span {
+      margin: 0;
+      padding: 0;
+      font-size: smaller; }
+
+[data-simplebar] {
+  position: relative;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  align-items: flex-start; }
+
+.simplebar-wrapper {
+  overflow: hidden;
+  width: inherit;
+  height: inherit;
+  max-width: inherit;
+  max-height: inherit; }
+
+.simplebar-mask {
+  direction: inherit;
+  position: absolute;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: auto !important;
+  height: auto !important;
+  z-index: 0; }
+
+.simplebar-offset {
+  direction: inherit !important;
+  box-sizing: inherit !important;
+  resize: none !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  -webkit-overflow-scrolling: touch; }
+
+.simplebar-content-wrapper {
+  direction: inherit;
+  box-sizing: border-box !important;
+  position: relative;
+  display: block;
+  height: 100%;
+  /* Required for horizontal native scrollbar to not appear if parent is taller than natural height */
+  width: auto;
+  visibility: visible;
+  overflow: auto;
+  /* Scroll on this element otherwise element can't have a padding applied properly */
+  max-width: 100%;
+  /* Not required for horizontal scroll to trigger */
+  max-height: 100%;
+  /* Needed for vertical scroll to trigger */ }
+
+.simplebar-content:before,
+.simplebar-content:after {
+  content: ' ';
+  display: table; }
+
+.simplebar-placeholder {
+  max-height: 100%;
+  max-width: 100%;
+  width: 100%;
+  pointer-events: none; }
+
+.simplebar-height-auto-observer-wrapper {
+  box-sizing: inherit !important;
+  height: 100%;
+  width: 100%;
+  max-width: 1px;
+  position: relative;
+  float: left;
+  max-height: 1px;
+  overflow: hidden;
+  z-index: -1;
+  padding: 0;
+  margin: 0;
+  pointer-events: none;
+  flex-grow: inherit;
+  flex-shrink: 0;
+  flex-basis: 0; }
+
+.simplebar-height-auto-observer {
+  box-sizing: inherit;
+  display: block;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1000%;
+  width: 1000%;
+  min-height: 1px;
+  min-width: 1px;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: -1; }
+
+.simplebar-track {
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  overflow: hidden; }
+
+[data-simplebar].simplebar-dragging .simplebar-track {
+  pointer-events: all; }
+
+.simplebar-scrollbar {
+  position: absolute;
+  right: 2px;
+  width: 7px;
+  min-height: 10px; }
+
+.simplebar-scrollbar:before {
+  position: absolute;
+  content: '';
+  background: black;
+  border-radius: 7px;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: opacity 0.2s linear; }
+
+.simplebar-track .simplebar-scrollbar.simplebar-visible:before {
+  /* When hovered, remove all transitions from drag handle */
+  opacity: 0.5;
+  transition: opacity 0s linear; }
+
+.simplebar-track.simplebar-vertical {
+  top: 0;
+  width: 11px; }
+
+.simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+  top: 2px;
+  bottom: 2px; }
+
+.simplebar-track.simplebar-horizontal {
+  left: 0;
+  height: 11px; }
+
+.simplebar-track.simplebar-horizontal .simplebar-scrollbar:before {
+  height: 100%;
+  left: 2px;
+  right: 2px; }
+
+.simplebar-track.simplebar-horizontal .simplebar-scrollbar {
+  right: auto;
+  left: 0;
+  top: 2px;
+  height: 7px;
+  min-height: 0;
+  min-width: 10px;
+  width: auto; }
+
+/* Rtl support */
+[data-simplebar-direction='rtl'] .simplebar-track.simplebar-vertical {
+  right: auto;
+  left: 0; }
+
+.hs-dummy-scrollbar-size {
+  direction: rtl;
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  height: 500px;
+  width: 500px;
+  overflow-y: hidden;
+  overflow-x: scroll; }
 
