--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,7 @@ $black: rgba(0,0,0,1);
 }
 
 
-html, body, #graph{ 
+html, body, #graph, #organigrammWrapper{ 
     margin:0; padding:0; max-width: 100%; max-height: 100%; overflow: hidden; 
     font-family: Monospace, "League Spartan", Monospace; font-size: 0.85em; font-weight: 200;
     background-color: $white; line-height: 1.5em;
@@ -94,7 +94,7 @@ ul{ list-style: none; padding:0;  li{padding: 0; margin: 0 0 0 0.3em;} }
     }
 }
 
-#filterWindow{
+#filterWindow, #standorteWindow{
     left: 5%;
     width: 17%;
     white-space: nowrap;
@@ -130,9 +130,16 @@ ul{ list-style: none; padding:0;  li{padding: 0; margin: 0 0 0 0.3em;} }
       color: $black;
       margin-left: 0.5em;
     }
+    input[type="checkbox"]:active, input[type="checkbox"]:focus{
+        border: none;
+        outline: none;
+    }
+    #metaChecklist input[type="checkbox"]{
+        margin: 0 0.5em 0 0;
+    }
     input[type="checkbox"]{
         display: inline-block;
-        margin: 0em 0.5em 0 0;
+        margin: 0em 0 0 0;
         transform: translateY(0.15em);
         background-color: transparent;
         border-radius: 0;
@@ -140,8 +147,16 @@ ul{ list-style: none; padding:0;  li{padding: 0; margin: 0 0 0 0.3em;} }
         width: 1em;
         height: 1em;
     }
+    input[type="checkbox"].labelDetails{
+        margin: 0 0.5em 0 0;
+        border-left:none;
+    }
     input[type="checkbox"]:checked{
          background-color:$black;
+    }
+    input[type="checkbox"].labelDetails:checked{
+        background-color: transparent;
+        background-image: url('../public/img/details.svg')
     }
     input[type="checkbox"]:focus{
         outline: 1px solid $black;
@@ -163,7 +178,38 @@ ul{ list-style: none; padding:0;  li{padding: 0; margin: 0 0 0 0.3em;} }
     ul{ 
         list-style: none; padding:0; 
         li{padding: 0.3em; margin: 0 0 0 0;}
-        li:hover{ color:$white; background-color:$black; }
+        li:hover{ 
+            color:$white; background-color:$black; 
+            a{ color: $white; }
+        }
         span{margin:0; padding:0; font-size: smaller;}
     }
+
+    a{
+        color: $black;
+        &:visited{
+            color: $black;
+        }
+    }
+}
+
+#organigrammWindow{
+    left: 5%;
+    width: 35%;
+    height: 50%;
+    overflow: hidden;
+    .windowContent{
+        padding:0;
+        max-height: 100%;
+    }
+    canvas{
+        max-height: 100%;
+        max-width: 100%;
+        height: 100% !important;
+    }
+}
+
+/*3d-force-graph node labels*/
+.scene-tooltip {
+    color: black !important;
 }
